feat: 调整对账发现的问题 #121543365

--- a/pkg/bk-monitor-worker/script/diff/diff_test.yaml
+++ b/pkg/bk-monitor-worker/script/diff/diff_test.yaml
@@ -1,7 +1,8 @@
-consul:
-  address: "127.0.0.1:8500"
-  port: 8500
-  addr: "http://127.0.0.1:8500"
-  srcPath: "test_prefix/"
-  dstPath: "test_prefix_bypass/"
-  bypassName: "_bypass"
+consulDiff:
+  showAllData: true
+  srcConsul:
+    address: "127.0.0.1:8500"
+    path: "test_prefix/"
+  bypassConsul:
+    address: "127.0.0.1:8500"
+    path: "test_prefix_bypass/"
