--- a/pkg/bkmonitorbeat/support-files/templates/freebsd/x86_64/project.yaml
+++ b/pkg/bkmonitorbeat/support-files/templates/freebsd/x86_64/project.yaml
@@ -31,8 +31,11 @@ config_templates:
               items:
                 title: interface
                 type: string
-            corefile_pattern_path:
-              title: corefile_pattern_path
+            corefile_pattern:
+              title: corefile_pattern
+              type: string
+            corefile_match_regex:
+              title: corefile_match_regex
               type: string
   - plugin_version: "*"
     name: bkmonitorbeat_prometheus.conf
