--- a/pkg/collector/Makefile
+++ b/pkg/collector/Makefile
@@ -32,7 +32,8 @@ test:
 build:
 	cd $(RELEASE_PATH) && ls -lh && rm -rf *
 	./control.sh package linux amd64 x86_64 $(VERSION) $(RELEASE_PATH)
-	cd $(RELEASE_PATH) && ls -lh && tar -zcvf bk-collector-$(VERSION).tgz --remove-files -C . *
+	cd $(RELEASE_PATH) && ls -lh && tar -zcvf bk-collector-$(VERSION).tgz --remove-files -C . * && cp bk-collector-$(VERSION).tgz bk-collector.tgz
+	./control.sh sidecar $(VERSION) $(RELEASE_PATH) && ls -lh $(RELEASE_PATH)
 
 .PHONY: mod
 mod:
