feat: pre-commit的配置中修复无法识别windows的bash命令 #1010158081117343251 # Reviewed, transaction id: 7602

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
       # 执行 preci 扫描
       - id: check-pre-ci-pre-commit
         name: check pre ci pre commit
-        entry: scripts/pre_commit/preci/scan.sh
+        entry: sh scripts/pre_commit/preci/scan.sh
         language: system
         verbose: true
 
