把_raw和_cmdb抽象成配置用来区分不同的环境,实现一个统一的替换旧VmRt的replace方法,增加一个单测 # Reviewed, transaction id: 7951

--- a/pkg/unify-query/unify-query.yaml
+++ b/pkg/unify-query/unify-query.yaml
@@ -26,6 +26,9 @@ victoria_metrics:
   code: bkmonitorv3
   secret:
   token:
+  druid_query:
+    raw_suffix: _raw
+    cmdb_suffix: _cmdb
 influxdb:
   ping:
     count: 3
