feat: sg环境查询支持cmdb --story=117457127 (#336)

--- a/pkg/unify-query/unify-query.yaml
+++ b/pkg/unify-query/unify-query.yaml
@@ -82,3 +82,7 @@ trace:
     type: grpc
 bbolt:
   default_path: bolt.db
+metadata:
+  druid_query:
+    raw_suffix: "_raw"
+    cmdb_suffix: "_cmdb"
