--- a/.gtmproject.yaml
+++ b/.gtmproject.yaml
@@ -14,6 +14,11 @@ project:
   # 默认目标分支
   default_target_branch: "master"
   # 范围，根据项目的模块或者分工设定，可为空
-  scopes: []
-  reviewers: []
+  scopes:
+  - 查询
+  - 采集
+  - 后台任务
+  reviewers:
+  - mandochen
+  - bellkeyang
 
