--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -177,7 +177,7 @@ bk-collector:
         enabled: true
       fta:
         enabled: true
-      logbeat:
+      beat:
         enabled: true
 
 
@@ -471,8 +471,8 @@ bk-collector:
     # Aes256
     - name: "token_checker/aes256"
 
-    # LogBeat 鉴权
-    - name: "token_checker/logbeat"
+    # Beat 鉴权
+    - name: "token_checker/beat"
 
     # LicenseChecker: 验证接入的节点数
     - name: "license_checker/common"
@@ -1083,10 +1083,10 @@ bk-collector:
           - "token_checker/aes256"
           - "rate_limiter/token_bucket"
 
-    - name: "logbeat_pipeline/common"
-      type: "logbeat"
+    - name: "beat_pipeline/common"
+      type: "beat"
       processors:
-        - "token_checker/logbeat"
+        - "token_checker/beat"
         - "rate_limiter/token_bucket"
 
   # =============================== Exporter =================================
