--- a/pkg/collector/dockerfile/collector/Dockerfile
+++ b/pkg/collector/dockerfile/collector/Dockerfile
@@ -1,8 +1,9 @@
 FROM centos:7
 
 VOLUME /data
-#RUN yum clean all && rm -f /var/lib/rpm/__db* && rpm --rebuilddb
-#RUN yum install -y iproute strace tcpdump
+RUN yum clean all && rm -f /var/lib/rpm/__db* && rpm --rebuilddb
+RUN curl -o /etc/yum.repos.d/CentOS-Base.repo https://mirrors.tencent.com/repo/centos7_base.repo
+RUN yum install -y iproute strace tcpdump
 
 RUN mkdir -p /data/hostid && mkdir -p /data/pid && mkdir -p /data/logs && mkdir -p /data/data
 RUN mkdir -p /data/collector
