feat: collector 支持 Taf 指标上报 #1010158081118216976

--- a/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
+++ b/pkg/collector/support-files/templates/linux/x86_64/etc/bk-collector.conf
@@ -108,6 +108,18 @@ bk-collector:
       # default: ""
       endpoint: ":4318"
 
+    # Tars Server Config
+    tars_server:
+      # 是否启动 Tars 服务
+      # default: false
+      enabled: false
+      # 传输协议，目前支持 tcp
+      # default: ""
+      transport: "tcp"
+      # 服务监听端点
+      # default: ""
+      endpoint: ":4319"
+
     components:
       jaeger:
         enabled: true
@@ -119,6 +131,8 @@ bk-collector:
         enabled: false
       fta:
         enabled: true
+      tars:
+        enabled: false
 
   processor:
     # ApdexCalculator: 健康度状态计算器
@@ -243,6 +257,12 @@ bk-collector:
 
     - name: "fta_pipeline/common"
       type: "fta"
+      processors:
+        - "token_checker/aes256"
+        - "rate_limiter/token_bucket"
+
+    - name: "tars_pipeline/common"
+      type: "tars"
       processors:
         - "token_checker/aes256"
         - "rate_limiter/token_bucket"
