--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -160,6 +160,18 @@ bk-collector:
       middlewares:
         - "maxbytes"
 
+    # Tars Server Config
+    tars_server:
+      # 是否启动 Tars 服务
+      # default: false
+      enabled: true
+      # 传输协议，目前支持 tcp
+      # default: ""
+      transport: "tcp"
+      # 服务监听端点
+      # default: ""
+      endpoint: ":4319"
+
     components:
       jaeger:
         enabled: true
@@ -179,7 +191,8 @@ bk-collector:
         enabled: true
       beat:
         enabled: true
-
+      tars:
+        enabled: true
 
   # =============================== Processor ================================
   # name: 名称规则为 ${processor}[/${id}]，id 字段为可选项
@@ -1089,6 +1102,12 @@ bk-collector:
       type: "beat"
       processors:
         - "token_checker/beat"
+        - "rate_limiter/token_bucket"
+
+    - name: "tars_pipeline/common"
+      type: "tars"
+      processors:
+        - "token_checker/aes256"
         - "rate_limiter/token_bucket"
 
   # =============================== Exporter =================================
