chore: 代码格式化

--- a/pkg/bkmonitorbeat/Makefile
+++ b/pkg/bkmonitorbeat/Makefile
@@ -4,6 +4,11 @@ NAME = bkmonitorbeat
 VERSION = ''
 COMMIT_ID = ''
 
+.PHONY: lint
+lint:
+	gofumpt -w .
+	goimports-reviser -project-name "github.com/TencentBlueKing/bkmonitor-datalink/pkg" ./...
+
 .PHONY: build
 build:
 	env VERSION=$(VERSION) RELEASE_PATH=$(RELEASE_PATH) ./script/gse_package.sh
@@ -11,4 +16,3 @@ build:
 .PHONY: test
 test:
 	go test ./...
-
