--- a/pkg/unify-query/Makefile
+++ b/pkg/unify-query/Makefile
@@ -13,6 +13,11 @@ build: tidy
 	mkdir -p $(RELEASE_PATH)
 	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags $(LDFLAGS) -o $(RELEASE_PATH)/$(NAME) ./main.go
 
+.PHONY: buildarm
+buildarm: tidy
+	mkdir -p $(RELEASE_PATH)
+	CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -ldflags $(LDFLAGS) -o $(RELEASE_PATH)/$(NAME) ./main.go
+
 .PHONY: debug
 debug: tidy
 	mkdir -p $(RELEASE_PATH)
