feat: 查询适配 bkbase es #1010158081119220907

--- a/pkg/unify-query/unify-query.yaml
+++ b/pkg/unify-query/unify-query.yaml
@@ -86,3 +86,11 @@ metadata:
   druid_query:
     raw_suffix: "_raw"
     cmdb_suffix: "_cmdb"
+bk_api:
+  code:
+  secret:
+bk_data:
+  host:
+  uri_path:
+  authentication_method:
+  token:
