--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -400,12 +400,12 @@ bk-collector:
           keys:
             - "resource.bk.data.token"
         from_cache:
-          key: "resource.service.name"
-          cache:
-            key: "service.name"
-            url: "http://localhost:8990/service_info"
-            interval: "1m"
-            timeout: "1m"
+#          key: "resource.service.name"
+#          cache:
+#            key: "service.name"
+#            url: "http://localhost:8990/service_info"
+#            interval: "1m"
+#            timeout: "1m"
 
     - name: "resource_filter/drop_token"
       config:
