--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -406,6 +406,9 @@ bk-collector:
 #            url: "http://localhost:8990/service_info"
 #            interval: "1m"
 #            timeout: "1m"
+        from_record:
+          - source: "request.client.ip"
+            destination: "resource.client.ip"
 
     - name: "resource_filter/drop_token"
       config:
