--- a/pkg/unify-query/unify-query.yaml
+++ b/pkg/unify-query/unify-query.yaml
@@ -82,13 +82,13 @@ metadata:
     raw_suffix: "_raw"
     cmdb_suffix: "_cmdb"
 bk_api:
-  address: 127.0.0.1
-  code:
-  secret:
+  address: http://127.0.0.1
+  code: bk_code
+  secret: bk_secret
 bk_data:
-  uri_path:
-  authentication_method:
-  token:
+  uri_path: bk_data
+  authentication_method: token
+  token: 123456
   cluster_space_uid:
     test:
     - bkcc__test
