feat: 新增单元测试 #1010158081120423778

--- a/pkg/unify-query/Makefile
+++ b/pkg/unify-query/Makefile
@@ -29,7 +29,7 @@ tidy:
 
 .PHONY: test
 test:
-	go test -timeout 1m -parallel 8  ./...
+	go test -cover -timeout 1m -parallel 8  ./...
 
 .PHONY: swag
 swag:
