--- a/pkg/operator/Makefile
+++ b/pkg/operator/Makefile
@@ -55,3 +55,7 @@ image: build
 	cp $(BIN) dockerfile/reloader/bkmonitorbeat-reloader
 	cd dockerfile/operator && docker build -t ${MIRRORS}/bkmonitor-operator:$(VERSION) . && docker push ${MIRRORS}/bkmonitor-operator:$(VERSION) && rm bkmonitor-operator
 	cd dockerfile/reloader && docker build -t ${MIRRORS}/bkmonitorbeat-reloader:$(VERSION) . && docker push ${MIRRORS}/bkmonitorbeat-reloader:$(VERSION) && rm bkmonitorbeat-reloader
+
+.PHONY: codegen
+codegen:
+	chmod +x ./hack/update-codegen.sh && bash ./hack/update-codegen.sh
