feat: 空间查询权限校验 #1010158081119887273

--- a/pkg/bk-monitor-worker/Makefile
+++ b/pkg/bk-monitor-worker/Makefile
@@ -43,3 +43,8 @@ tidy:
 
 imports:
 	goimports-reviser -project-name "github.com/TencentBlueKing/bkmonitor-datalink/pkg" ./...
+
+.PHONY: gen
+gen:
+	#find . -type f -name 'qs_*_gen.go' -exec rm -f {} \;
+	go generate ./...
