feat: collector 新增 zipkin 协议支持

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -172,7 +172,7 @@ bk-collector:
       remotewrite:
         enabled: true
       zipkin:
-        enabled: false
+        enabled: true
       skywalking:
         enabled: true
       pyroscope:
