--- a/pkg/collector/support-files/templates/linux/x86_64/project.yaml
+++ b/pkg/collector/support-files/templates/linux/x86_64/project.yaml
@@ -27,10 +27,10 @@ config_templates:
           properties:
             http_max_bytes:
               title: http_max_bytes
-              type: number
+              type: string
             grpc_max_bytes:
               title: grpc_max_bytes
-              type: number
+              type: string
 
   - plugin_version: "*"
     name: bk-collector-platform.conf
