feat: collector 新增 middleware 配置能力--story=120986667 (#638)

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -92,7 +92,7 @@ bk-collector:
       port: 10205
       middlewares:
         - "logging"
-        - "maxconns"
+        - "maxconns;maxConnectionsRatio=256"
 
   # ============================== Pingserver ================================
   pingserver:
@@ -123,8 +123,8 @@ bk-collector:
         - "logging"
         - "cors"
         - "content_decompressor"
-        - "maxconns"
-        - "maxbytes"
+        - "maxconns;maxConnectionsRatio=256"
+        - "maxbytes;maxRequestBytes=209715200"
 
     admin_server:
       # 是否启动 Http 服务
@@ -148,7 +148,7 @@ bk-collector:
       # default: ""
       endpoint: ":4317"
       middlewares:
-        - "maxbytes"
+        - "maxbytes;maxRequestBytes=8388608"
 
     # Tars Server Config
     tars_server:
