--- a/.gtmproject.yaml
+++ b/.gtmproject.yaml
@@ -15,8 +15,8 @@ project:
   default_target_branch: "master"
   # 范围，根据项目的模块或者分工设定，可为空
   scopes:
-    - unifyquery
-    - bkmonitorworker
+    - unify-query
+    - bk-monitor-worker
     - bkmontiorbeat
     - collector
     - operator
@@ -27,4 +27,7 @@ project:
     - influxdbproxy
     - influxdb
     - libgse
+
+  default_label: "datalink"
+
   reviewers: [ ]
