feat: 优化 bksql 查询逻辑，增加 thedate 条件过滤 #1010158081121169369

--- a/pkg/unify-query/Makefile
+++ b/pkg/unify-query/Makefile
@@ -49,4 +49,4 @@ addlicense:
 
 .PHONY: imports
 imports: addlicense
-	goimports-reviser -rm-unused -set-alias -format ./...
+	goimports-reviser -rm-unused -set-alias -format -project-name "github.com/TencentBlueKing/bkmonitor-datalink/pkg" ./...
