--- a/pkg/unify-query/Makefile
+++ b/pkg/unify-query/Makefile
@@ -45,8 +45,8 @@ lint:
 
 .PHONY: addlicense
 addlicense:
-	find ./ -type f \( -iname \*.go -o -iname \*.py -iname \*.sh \)|xargs addlicense -v -f ../../scripts/license.txt -ignore vendor/*
+	find ./ -type f \( -iname \*.go -o -iname \*.py -iname \*.sh \) | xargs addlicense -v -f ../../scripts/license.txt -ignore vendor/*
 
 .PHONY: imports
 imports: addlicense
-	goimports-reviser -rm-unused -set-alias -format ./...
+	goimports-reviser -rm-unused -set-alias -format -project-name "github.com/TencentBlueKing/bkmonitor-datalink/pkg" ./...
