feat: 日志查询支持doris #1010158081121933504

--- a/pkg/unify-query/Makefile
+++ b/pkg/unify-query/Makefile
@@ -50,3 +50,7 @@ addlicense:
 .PHONY: imports
 imports: addlicense
 	goimports-reviser -rm-unused -set-alias -format -project-name "github.com/TencentBlueKing/bkmonitor-datalink/pkg" ./...
+
+.PHONY: race
+race:
+	go test -race -timeout 1m -parallel 8  ./...
