feat: collector 支持不同版本 sdk 字段映射 #1010158081124177438

--- a/pkg/collector/example/fixtures/platform.yml
+++ b/pkg/collector/example/fixtures/platform.yml
@@ -23,3 +23,11 @@ pipeline:
       - "token_checker/fixed"
       - "attribute_filter/as_string"
       - "apdex_calculator/standard"
+
+field_alias:
+  - field: "attributes.http.method"
+    alias:
+      - "attributes.http.request.method"
+  - field: "resource.telemetry.sdk.language"
+    alias:
+      - "resource.telemetry.sdk.lang"
