--- a/pkg/unify-query/unify-query.yaml
+++ b/pkg/unify-query/unify-query.yaml
@@ -21,6 +21,7 @@ redis:
   service_name: bkmonitorv3:spaces
 victoria_metrics:
   timeout: 30s
+  cluster_name: abc
 influxdb:
   ping:
     count: 3
