--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -240,6 +240,13 @@ bk-collector:
         from_metadata:
           keys: ["*"]
 
+    - name: "resource_filter/default_value"
+      config:
+        default_value:
+        - key: "resource.service.name"
+          type: "string"
+          value: "unknown_service"
+
     # AttributeFilter: 属性过滤处理器
     # AsString: 将 attributes 字段里的某些维度类型转为 string
     - name: "attribute_filter/common"
@@ -1023,6 +1030,7 @@ bk-collector:
         #- "license_checker/common"
         #- "forwarder/traces"
         #- "sampler/status_code"
+#        - "resource_filter/default_value"
         - "resource_filter/common"
         - "attribute_filter/common"
         - "resource_filter/user_metadata"
