chore: change unify-query.yaml
- update MultiTenantMode config path

--- a/pkg/unify-query/unify-query.yaml
+++ b/pkg/unify-query/unify-query.yaml
@@ -37,11 +37,11 @@ influxdb:
   max_limit: 1e8
   max_slimit: 1e5
   tolerance: 5
-  system_tenant_with_suffix: false
 es:
   max_concurrency: 200
   alias_refresh_period: 1m
 http:
+  multiTenantMode: false
   address: 127.0.0.1
   path:
     es: /query/es
