feat: collector 派生指标注入 token

--- a/pkg/collector/example/example.yml
+++ b/pkg/collector/example/example.yml
@@ -1094,7 +1094,7 @@ bk-collector:
       type: "metrics.derived"
       processors:
 #        - "apdex_calculator/standard"
-        - "resource_filter/metrics"
+#        - "resource_filter/metrics"
 
     - name: "profiles_pipeline/common"
       type: "profiles"
